[package]
name = "tatsoryk-server"
description = "Implementation of the server for Tatsoryk"
repository = "https://github.com/LoungeCPP/Tatsoryk/tree/master/server"
readme = "README.md"
keywords = ["game", "lounge", "server"]
license = "MIT"
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>",
           "Lalaland <ethan.steinberg@gmail.com"]

[dependencies]
serde = "0.7"
serde_json = "0.7"

[dev-dependencies]
rand = "0.3"