[package]
name = "tatsoryk-server"
description = "Implementation of the server for Tatsoryk"
repository = "https://github.com/LoungeCPP/Tatsoryk/tree/master/server"
readme = "README.md"
keywords = ["game", "lounge", "server"]
license = "MIT"
version = "0.1.0"
# Remember to also modify options.rs authors
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Cat Plus Plus <piotrlegnica@piotrl.pl>",
           "Lalaland <ethan.steinberg@gmail.com"]

[dependencies]
clap = "2.3"
rand = "0.3"
time = "0.1"
ctrlc = "2.0"
serde = "0.7"
websocket = "0.16"
serde_json = "0.7"
